# ddi-service-apis

./: LICENSE  README.md
encryption_api/: MANIFEST.in  manage.py  requirements.txt  setup.cfg
encryption_api/encryption/: compression_functions.py  encryption_api.py  encryption_functions.py  tasks.py  utils.py  validate_input.py  views.py
encryption_api/encryption_api/: celery.py  settings.py  urls.py  wsgi.py
encryption_api/zip/: irods_transfer.py  tasks.py  urls.py  views.py
gridmapapi/: MANIFEST.in  manage.py  requirements.txt  setup.cfg
gridmapapi/demo/: settings.py  urls.py  utils.py  views.py
gridmapapi/moz_test/: settings.py  urls.py
gridmapapi/static/: .gitignore
irodsapi/: MANIFEST.in  config_example.conf  requirements.txt  setup.cfg
irodsapi/demo/: dataset.py  getRefreshToken.py  globus_views.py  irods_listing.py  irods_project.py  irods_setup_views.py  irods_user.py  keycloak_api.py  metadata.py  models.py  settings.py  staging.py  sync.py  tasks.py  tests.py  tus.py  urls.py  utils.py  views.py
irodsapi/irodsApisForWp8/: .gitignore  README.md  check_irods.py  group.py  internal_transfer.py  irods_transfer.py  projects.py  user.py  utils.py
irodsapi/moz_test/: celery.py  keycloakauth.py  settings.py  urls.py  wsgi.py
staging/: MANIFEST.in  manage.py  requirements.txt  setup.cfg
staging/encryption/: apps.py  compression_functions.py  encryption_api.py  encryption_functions.py  errors.py  nfs_transfer.py  requirements.txt  tasks.py  urls.py  validate_input.py
staging/staging/: apps.py  b2safe_replicate.py  cp_ssh.py  data_size.py  generate_config.py  heappe_requests.py  nfs_transfer.py  (+10 more)
(+81 files in other folders)
