[metadata]
name = irods_api
version = 0.1
description = LEXIS DDI iRODS Metadata API
long_description = file: README.md
url = https://github.com/lexis-project/ddi-service-apis
author = Rubén García-Hernández
author_email = lexis@lrz.de
classifiers =
    Environment :: Web Environment
    Framework :: Django

[options]
include_package_data = true
packages = find:
