[metadata]
name = staging_api
version = 0.1
description = LEXIS DDI Staging API
long_description = file: README.md
url = https://code.it4i.cz/lexis/wp3
author = Mohamad Hayek
author_email = lexis@lrz.de
classifiers =
    Environment :: Web Environment
    Framework :: Django

[options]
include_package_data = true
packages = find:
